# growatt-api-rust

./: .env.local  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/tests/: growatt_tests.rs  mod.rs
