[package]
name = "growatt-api-rust"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Growatt API"
authors = ["ENWUFT <wit.chanthawat@gmail.com>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
md-5 = "0.10"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
