[package]
name = "growatt"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Growatt API"
authors = ["NakaSato <wit.chanthawat@gmail.com>"]
license = "MIT"
repository = "https://github.com/NakaSato/growatt-api-rust"
keywords = ["api", "growatt", "solar", "energy", "inverter"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
# HTTP and networking
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility libraries
chrono = "0.4"
md-5 = "0.10"
hex = "0.4"
dotenv = "0.15.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.5"
mockito = "0.32"
test-log = "0.2"
pretty_assertions = "1.3"
